Cloud Native/Kubernetes/kanboard/kb-db.yaml
# https://kanboard.org
# https://docs.kanboard.org/v1/admin/docker/
---
#T* Service
apiVersion: v1
kind: Service
metadata:
  name: kb-db-service
  labels:
    app: kb-db

spec:
  selector:
    app: kb-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
#T* StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kb-db-sts
  labels:
    app: kb-db

spec:
  serviceName: kb-db-service
  replicas: 1
  selector:
    matchLabels:
      app: kb-db
  
  template:
    metadata:
      generateName: kb-db
      labels:
        app: kb-db
  
    spec:
      containers:
        - name: kb-db
          image: mariadb:latest
          imagePullPolicy: IfNotPresent
          resources: {}
          ports:
            - containerPort: 3306
              name: kb-db
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
            
  volumeClaimTemplates:
    - metadata:
        name: mariadb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 250Mi
    

status: 
  replicas: 1
