Cloud Native/Kubernetes/kanboard/kb.yaml
# https://kanboard.org
# https://docs.kanboard.org/v1/admin/docker/
---
#T* Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: kb-ingress

spec:
  rules:
  - host: reyes0.my.kube.um.edu.ar
    http:
      paths:
      - backend:
          service:
            name: kb-service
            port:
              number: 80
        path: /
        pathType: Prefix

---
#T* Service
apiVersion: v1
kind: Service
metadata:
  name: kb-service
  labels:
    app: kb

spec:
  selector:
    app: kb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
#T* Deployment
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kb-deploy
  labels:
    app: kb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kb

  template:
    metadata:
      labels:
        app: kb

    spec:
      containers:
        - name: kb
          image: kanboard/kanboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
